<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2"
           >

               <ImageView
                    android:id="@+id/house_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"
                   android:padding="10dp">

                   <TextView
                       android:id="@+id/title"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentLeft="true"
                       android:layout_marginTop="20dp"
                       android:text="@string/title"
                       android:textColor="#000000"
                       android:textSize="20sp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/addr1"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/title"
                       android:layout_alignParentLeft="true"
                       android:layout_marginTop="10dp"
                       android:text="@string/address1"
                       android:textColor="#000000"
                       android:textSize="15sp" />

                   <TextView
                       android:id="@+id/addr2"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/addr1"
                       android:layout_alignParentLeft="true"
                       android:text="@string/address2"
                       android:textColor="#000000"
                       android:textSize="15sp" />

                   <TextView
                       android:id="@+id/addr3"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/addr2"
                       android:layout_alignParentLeft="true"
                       android:text="@string/address3"
                       android:textColor="#000000"
                       android:textSize="15sp" />

                   <TextView
                       android:id = "@+id/bedcount"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/addr3"
                       android:layout_alignParentLeft="true"
                       android:text="@string/nofbeds"
                       />

                   <ImageView
                       android:id="@+id/bedImg"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/addr3"
                       android:layout_toRightOf="@+id/bedcount"
                       app:srcCompat="@drawable/bed_icon" />

                   <TextView
                       android:id = "@+id/bathcount"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/addr3"
                       android:layout_marginLeft="10dp"
                       android:layout_toRightOf="@+id/bedImg"
                       android:text="@string/nofbeds"
                       />

                   <ImageView
                       android:id = "@+id/bathImg"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/addr3"
                       android:layout_toRightOf="@+id/bathcount"
                       app:srcCompat="@drawable/bath_icon" />

                   <TextView
                       android:id = "@+id/carcount"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/addr3"
                       android:layout_marginLeft="10dp"
                       android:layout_toRightOf="@+id/bathImg"
                       android:text="@string/nofbeds"
                       />

                   <ImageView
                       android:id="@+id/carImg"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/addr3"
                       android:layout_toRightOf="@+id/carcount"
                       app:srcCompat="@drawable/car_icon" />





          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:layout_marginTop="20dp"
              android:layout_marginRight="10dp"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              >

<!--                <com.maq.propertyapp.CircleImageView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/profile_image"-->
<!--                    app:border_width="10dp"-->
<!--                    app:border_color="#000000"-->
<!--                    />-->

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/profile_name"
                    android:textSize="20sp" />
                   </LinearLayout>

               </RelativeLayout>

         </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>